# src/vmm/src/resources.rs
@@ -1428,6 +1428,7 @@ mod tests {
             cpu_template: Some(StaticCpuTemplate::V1N1),
             track_dirty_pages: Some(false),
             huge_pages: Some(HugePageConfig::None),
+            tsc_khz_multiplier: None,
             #[cfg(feature = "gdb")]
             gdb_socket_path: None,
         };
